# blockmmo

./: AGENTS.md  CODE_OF_CONDUCT.md  Dockerfile  README.md  index.html  package.json  server.js  test_loop.js  verify_cuj.py
.Jules/: palette.md
.aws/: task-definition.json
.github/workflows/: deploy.yml
.jules/: bolt.md
api/: index.js
assets/pixel/: manifest.json
contracts/: BUILD.md  README.md
contracts/tests-integration/: Cargo.toml
contracts/tests-integration/tests/: character.rs  settlement.rs
contracts/tests-integration/tests/common/: mod.rs
docs/design/: ASSET-PROMPTS.md  DESIGN-BIBLE.md  PRD.md  Q-F7a-season-window-ruling.md  (+1 more)
engine/: api.md  battlefield.js  platformer.js  sequencer.js  turnbased.js
game/: chain.js  content.js  overworld.js  signin.js  wallet.js
molt-dispatch/: package-lock.json  package.json
scripts/: verify_area1_exploration.js  verify_area1_puzzles.js  verify_area2_discovery.js  verify_area2_forks.js  verify_area3_auditor.js  verify_asset_integration.js  verify_authority_model.js  verify_boss_sigils.js  verify_chainwell_authority.js  verify_character_season_state.js  verify_core_runtime.js  verify_gold_cosmetics.js  verify_grid_assignments.js  verify_halving.js  verify_identity_join.js  verify_overworld.js  verify_presence_modes.js  verify_pvp_turn_arbitration.js  verify_reward_rate_limit.js  verify_rune_spend.js  verify_segment_sequencer.js  verify_settlement_architecture.js  verify_signin_client.js  verify_town_interaction.js  verify_turnbased_rpg.js  verify_wallet_adapter.js  verify_world_interiors.js
(+17 files in other folders)
